<resources>
    <string name="app_name">MyBlogApp</string>
    <string name="pass">password</string>
    <string name="login">Login</string>
    <string name="mainImg">Main image of Blog</string>
    <string name="date">August 2, 2019</string>
    <string name="title">Main Title</string>
    <string name="avatar_img">Avatar Image</string>
    <string name="author_name">Grey Wells</string>
    <string name="rating">4.4</string>
    <string name="views">(2867 views)</string>
    <string name="description">This is the description of the place</string>
    <string name="back_btn">back_img to go back</string>
    <string name="loading">LOADING....</string>
    <string name="sort">sort</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">


        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"


    </string>
    <string name="action_settings">Settings</string>
</resources>