<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loadingText"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/mainImg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sydney" />

    <TextView
        android:id="@+id/titleText"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintStart_toStartOf="@id/date"
        tools:text="@string/title" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        app:layout_constraintTop_toTopOf="@+id/imageMain" />

    <TextView
        android:id="@+id/date"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/imageMain"
        app:layout_constraintStart_toStartOf="@+id/imageMain"
        tools:text="@string/date" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar_img"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/imageMain"
        app:layout_constraintTop_toBottomOf="@id/imageMain"
        tools:src="@drawable/avatar" />

    <TextView
        android:id="@+id/author"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        tools:text="@string/author_name" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:rating="4.4" />

    <TextView
        android:id="@+id/textRating"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@string/rating" />

    <TextView
        android:id="@+id/textViews"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textRating"
        app:layout_constraintStart_toEndOf="@+id/textRating"
        app:layout_constraintTop_toTopOf="@+id/textRating"
        tools:text="@string/views" />

    <TextView
        android:id="@+id/textDes"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:text="@string/description" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/back_btn"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageMain" />


</androidx.constraintlayout.widget.ConstraintLayout>