<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Material3.DayNight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/blogTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/blogDate"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/date" />

    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_img"
        android:scaleType="centerCrop"
        tools:src="@drawable/avatar" />

</LinearLayout>